docs/phase7-sg-snapshot.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-01bd6bd704541a10a",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "app-sg"
                },
                {
                    "Key": "Project",
                    "Value": "aws-vpc-build"
                }
            ],
            "VpcId": "vpc-00c13439a534d15bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:REDACTED-ACCOUNT-ID:security-group/sg-01bd6bd704541a10a",
            "OwnerId": "REDACTED-ACCOUNT-ID",
            "GroupName": "app-sg",
            "Description": "App tier - inbound only from the bastion security group",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "UserId": "REDACTED-ACCOUNT-ID",
                            "GroupId": "sg-015f1011f22037bdd"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-015f1011f22037bdd",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "aws-vpc-build"
                },
                {
                    "Key": "Name",
                    "Value": "bastion-sg"
                }
            ],
            "VpcId": "vpc-00c13439a534d15bb",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:REDACTED-ACCOUNT-ID:security-group/sg-015f1011f22037bdd",
            "OwnerId": "REDACTED-ACCOUNT-ID",
            "GroupName": "bastion-sg",
            "Description": "Bastion host - management via SSM only, no inbound rules",
            "IpPermissions": []
        }
    ]
}
